debug migrate db

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,21 +2,20 @@ pipeline:
   migratedb_stage:
     image: node:8
     commands:
-      - export DATABASE_URL=$${DATABASE_URL_STAGE}
       - npm i
       - NODE_ENV=migrate npm run migrate
     when:
       event: tag
     secrets:
       - database_url
-  migratedb_stage:
+  migratedb_prod:
     image: node:8
     commands:
       - export DATABASE_URL=$${DATABASE_URL_PROD}
       - npm i
       - NODE_ENV=migrate npm run migrate
     when:
-      event: tag
+      event: deployment
     secrets:
       - database_url
   build_docker_stage:
