--- a/.drone.yml
+++ b/.drone.yml
@@ -2,12 +2,13 @@ pipeline:
   migratedb_stage:
     image: node:8
     commands:
+      - export DATABASE_URL=$${DATABASE_URL_STAGE}
       - npm i
       - NODE_ENV=migrate npm run migrate
     when:
       event: tag
     secrets:
-      - database_url
+      - database_url_stage
   migratedb_prod:
     image: node:8
     commands:
@@ -17,7 +18,7 @@ pipeline:
     when:
       event: deployment
     secrets:
-      - database_url
+      - database_url_prod
   build_docker_stage:
     image: plugins/docker
     repo: andyet/talky-api
