--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "knex": "knex",
     "createdb": "psql -d postgres -c \"CREATE ROLE $(node -pe 'require(\"getconfig\").db.user') WITH PASSWORD '$(node -pe 'require(\"getconfig\").db.password')' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb $(node -pe 'require(\"getconfig\").db.database') -O $(node -pe 'require(\"getconfig\").db.user')",
     "destroydb": "psql -d postgres -c \"DROP DATABASE $(node -pe 'require(\"getconfig\").db.database')\" && psql -d postgres -c \"DROP ROLE $(node -pe 'require(\"getconfig\").db.user');\"",
-    "test": "lab -a code -L -v -e test",
+    "test": "lab -a code -L -v -e test -I __core-js_shared__",
     "coverage": "lab -a code -e test -L -r html -o coverage.html",
     "start-prosody": "node ./scripts/start-prosody",
     "purge-pii": "node ./scripts/purge-pii",
@@ -26,43 +26,43 @@
   "author": "",
   "license": "See LICENSE file",
   "dependencies": {
-    "@now-ims/hapi-now-auth": "^1.0.1",
+    "@now-ims/hapi-now-auth": "^1.1.1",
     "array-shuffle": "^1.0.1",
     "base32-crockford-browser": "^1.0.0",
-    "boom": "^7.1.1",
-    "getconfig": "^4.0.0",
-    "good": "^8.0.0-rc1",
-    "good-console": "^6.4.0",
-    "good-squeeze": "^5.0.2",
-    "hapi": "^17.2.0",
+    "boom": "^7.2.0",
+    "getconfig": "^4.5.0",
+    "good": "^8.1.1",
+    "good-console": "^7.1.0",
+    "good-squeeze": "^5.1.0",
+    "hapi": "^17.5.2",
     "hapi-auth-basic": "^5.0.0",
     "hapi-pagination": "^2.0.0",
-    "hapi-swagger": "^9.0.2",
-    "http-proxy": "^1.16.2",
-    "humanize-duration": "^3.11.0",
-    "inert": "^5.0.1",
-    "jsonwebtoken": "^8.1.0",
+    "hapi-swagger": "^9.1.1",
+    "http-proxy": "^1.17.0",
+    "humanize-duration": "^3.15.0",
+    "inert": "^5.1.0",
+    "jsonwebtoken": "^8.3.0",
     "keyfob": "^1.0.0",
-    "knex": "^0.14.2",
+    "knex": "^0.15.0",
     "minimist": "^1.2.0",
     "muckraker": "^4.0.1",
-    "pg": "^7.3.0",
-    "pug": "^2.0.0-rc.4",
+    "pg": "^7.4.3",
+    "pug": "^2.0.3",
     "redis": "^2.8.0",
-    "ua-parser-js": "^0.7.17",
-    "vision": "^5.3.0"
+    "ua-parser-js": "^0.7.18",
+    "vision": "^5.3.3"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "code": "^5.1.0",
-    "eslint": "^4.10.0",
+    "code": "^5.2.0",
+    "eslint": "^4.19.1",
     "eslint-config-andyet": "^2.1.0",
     "faker": "^4.1.0",
     "git-validate": "^2.2.2",
-    "lab": "^15.1.2",
-    "nock": "^9.0.27",
-    "nodemon": "^1.12.1",
-    "readline-sync": "^1.4.7",
+    "lab": "^15.5.0",
+    "nock": "^9.4.2",
+    "nodemon": "^1.18.1",
+    "readline-sync": "^1.4.9",
     "redis-mock": "^0.20.0"
   },
   "pre-commit": [
