update packages to latest; replace node-uuid with uuid

--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "signal-master",
   "description": "Simple signaling server for SimpleWebRTC",
   "version": "1.0.1",
-  "dependencies": {
-    "getconfig": "^4.3.0",
-    "node-uuid": "1.2.0",
-    "socket.io": "1.3.7",
-    "yetify": "0.0.1"
-  },
-  "main": "server.js",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:andyet/signal-master.git"
+    "url": "git@github.com:rifflearning/signalmaster.git"
   },
-  "devDependencies": {
-    "socket.io-client": "1.3.7",
-    "precommit-hook": "0.3.10",
-    "tape": "^2.13.1"
-  },
-  "license": "MIT",
+  "main": "server.js",
   "scripts": {
     "test": "node test.js"
+  },
+  "dependencies": {
+    "getconfig": "^4.5.0",
+    "socket.io": "^2.1.1",
+    "uuid": "^3.3.2",
+    "yetify": "^0.1.0"
+  },
+  "devDependencies": {
+    "socket.io-client": "^2.1.1",
+    "tape": "^4.9.1"
   }
 }
