--- a/.drone.yml
+++ b/.drone.yml
@@ -37,20 +37,44 @@ pipeline:
     secrets: [ docker_username, docker_password ]
     when:
       event: [ deployment ]
-  deploy_api_stage:
-    image: quay.io/honestbee/drone-kubernetes
-    kubernetes_server: ${KUBERNETES_SERVER}
-    kubernetes_cert: ${KUBERNETES_CERT}
-    kubernetes_token: ${KUBERNETES_TOKEN}
-    deployment: swrtc-api-stage
-    repo: andyet/talky-api
-    container: swrtc-api-stage
-    namespace: default
-    tag:
-    - ${DRONE_TAG##v}
+  # deploy_api_stage:
+  #   image: quay.io/honestbee/drone-kubernetes
+  #   kubernetes_server: ${KUBERNETES_SERVER}
+  #   kubernetes_cert: ${KUBERNETES_CERT}
+  #   kubernetes_token: ${KUBERNETES_TOKEN}
+  #   deployment: swrtc-api-stage
+  #   repo: andyet/talky-api
+  #   container: swrtc-api-stage
+    # namespace: default
+    # tag:
+    # - ${DRONE_TAG##v}
+    # when:
+    #   event: tag
+    # secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  drone_helm_stage:
+    image: andyet/drone-helm:latest
+    pull: true
+    debug: true
+    skip_tls_verify: false
+    chart: ./charts/swrtc-api
+    prefix: staging
+    recreate_pods: true
+    release: swrtc-api-stage
+    values: deployment.image.tag=${DRONE_TAG##v},nodeSelector.swrtc-api-stage=true,global.baseDomain=stagesimplewebrtc.com,global.environment=stage,swrtc-ice.nodeSelector.ice-stage=true,swrtc-ice.deployment.image.tag=0.21,prosody.nodeSelector.prosody-stage=true,prosody.deployment.image.tag=latest-081018,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
+    secrets: [ staging_REDIS_PASSWORD, staging_DATABASE_URL, staging_TURN_SECRET, staging_ADMIN_PASSWORD, staging_CUSTOMER_API_KEY, staging_INTERNAL_API_KEY, staging_TALKY_LICENSE, staging_TAG=${DRONE_TAG##v},staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
     when:
       event: tag
-    secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
+  drone_helm_prod:
+    image: andyet/drone-helm:latest
+    pull: true
+    skip_tls_verify: false
+    chart: ./charts/swrtc-api
+    prefix: staging
+    recreate_pods: true
+    release: swrtc-api-stage
+    secrets: [ staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
+    when:
+      event: tag
   deploy_prod:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
