--- a/.drone.yml
+++ b/.drone.yml
@@ -47,6 +47,7 @@ pipeline:
     recreate_pods: true
     release: swrtc-api-stage
     values: deployment.image.tag=${DRONE_TAG##v},nodeSelector.swrtc-api-stage=true,global.baseDomain=stagesimplewebrtc.com,global.environment=stage,swrtc-ice.nodeSelector.ice-stage=true,swrtc-ice.deployment.image.tag=0.21,prosody.nodeSelector.prosody-stage=true,prosody.deployment.image.tag=latest-081018,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
+    secrets: [ staging_REDIS_PASSWORD, staging_DATABASE_URL, staging_TURN_SECRET, staging_ADMIN_PASSWORD, staging_CUSTOMER_API_KEY, staging_INTERNAL_API_KEY, staging_TALKY_LICENSE, staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
     when:
       event: tag
   drone_helm_prod:
@@ -59,7 +60,7 @@ pipeline:
     release: swrtc-api-stage
     secrets: [ staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
     when:
-      event: tag
+      event: deployment
   deploy_prod:
     image: quay.io/honestbee/drone-kubernetes
     kubernetes_server: ${KUBERNETES_SERVER}
