--- a/charts/swrtc-api/values.yaml
+++ b/charts/swrtc-api/values.yaml
@@ -18,23 +18,19 @@ service:
 ingress:
   tls:
     enabled: true
-    secret: stagesimplewebrtc-com-tls
+    secret: simplewebrtc-com-tls
   annotations:
     kubernetes.io/ingress.class: gce
 secrets:
   data:
-    REDIS_PASSWORD: dGVzdC10b2tlbg==
-    DATABASE_URL: dGVzdC10b2tlbg==
-    TURN_SECRET: dGVzdC10b2tlbg==
     ADMIN_PASSWORD: dGVzdC10b2tlbg==
     CUSTOMER_API_KEY: dGVzdC10b2tlbg==
+    DATABASE_URL: dGVzdC10b2tlbg==
     INTERNAL_API_KEY: dGVzdC10b2tlbg==
+    REDIS_PASSWORD: dGVzdC10b2tlbg==
     TALKY_LICENSE: dGVzdC10b2tlbg==
 config:
   data:
-    REDIS_HOST: "10.128.0.8"
-    REDIS_PORT: "6379"
-    CHROME_EXTENSION_ID: kochadnnpmbkfdhlaajaemgjmkjfhfkb
 global:
   apiServicePort: 8003
   prosodyPort: 5280
