write chart for stage

--- a/.drone.yml
+++ b/.drone.yml
@@ -47,7 +47,7 @@ pipeline:
     recreate_pods: true
     release: swrtc-api-stage
     values: deployment.image.tag=${DRONE_TAG##v},secondaryDomain=stagetalky.io,global.baseDomain=stagesimplewebrtc.com,global.environment=stage,swrtc-ice.deployment.image.tag=0.21,swrtc-ice.volumes[0].spec.secret.secretName=ice-stagesimplewebrtc-com-tls,swrtc-ice.config.data.PUBLIC_IP=35.202.210.1,prosody.deployment.image.tag=latest-081018,prosody.volumes[0].spec.configMap.name=prosody-config-stage,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
-    string_values: nodeSelector.swrtc-api-stage=true,swrtc-ice.nodeSelector.ice-stage=true,prosody.nodeSelector.prosody-stage=true
+    string_values: nodeSelector.swrtc-api-stage="true",swrtc-ice.nodeSelector.ice-stage="true",prosody.nodeSelector.prosody-stage="true"
     secrets: [ staging_REDIS_PASSWORD, staging_DATABASE_URL, staging_TURN_SECRET, staging_ADMIN_PASSWORD, staging_CUSTOMER_API_KEY, staging_INTERNAL_API_KEY, staging_TALKY_LICENSE, staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
     when:
       event: tag
@@ -60,24 +60,11 @@ pipeline:
     debug: true
     recreate_pods: true
     release: swrtc-api-prod
-    values: deployment.image.tag=latest,secondaryDomain=talky.io,global.baseDomain=simplewebrtc.com,global.environment=prod,swrtc-ice.deployment.image.tag=0.21,swrtc-ice.deployment.image.tag=0.21,prosody.deployment.image.tag=latest-102418,swrtc-ice.volumes[0].spec.secret.secretName=ice-prod-simplewebrtc-com-tls,swrtc-ice.config.data.PUBLIC_IP=35.193.222.116,prosody.volumes[0].spec.configMap.name=prosody-config-prod,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
-    string_values: nodeSelector.swrtc-api-prod=true,swrtc-ice.nodeSelector.ice-prod="true",prosody.nodeSelector.prosody-prod="true"
+    values: deployment.image.tag=latest,secondaryDomain=talky.io,global.baseDomain=simplewebrtc.com,global.environment=prod,swrtc-ice.deployment.image.tag=0.21,swrtc-ice.volumes[0].spec.secret.secretName=ice-prod-simplewebrtc-com-tls,swrtc-ice.config.data.PUBLIC_IP=35.193.222.116,prosody.deployment.image.tag=latest-102418,prosody.volumes[0].spec.configMap.name=prosody-config-prod,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
+    string_values: nodeSelector.swrtc-api-prod="true",swrtc-ice.nodeSelector.ice-prod="true",prosody.nodeSelector.prosody-prod="true"
     secrets: [ prod_REDIS_PASSWORD, prod_DATABASE_URL, prod_TURN_SECRET, prod_ADMIN_PASSWORD, prod_CUSTOMER_API_KEY, prod_INTERNAL_API_KEY, prod_TALKY_LICENSE, prod_KUBERNETES_CERTIFICATE, prod_KUBERNETES_TOKEN, prod_API_SERVER ]
     when:
       event: deployment
-  # deploy_prod:
-  #   image: quay.io/honestbee/drone-kubernetes
-  #   kubernetes_server: ${KUBERNETES_SERVER}
-  #   kubernetes_cert: ${KUBERNETES_CERT}
-  #   kubernetes_token: ${KUBERNETES_TOKEN}
-  #   deployment: swrtc-api-prod
-  #   repo: andyet/talky-api
-  #   container: api-prod
-  #   namespace: default
-  #   tag: ${DRONE_COMMIT_SHA:0:8}
-  #   when:
-  #     event: deployment
-  #   secrets: [ kubernetes_cert, kubernetes_server, kubernetes_token ]
   slack:
     image: plugins/slack
     username: drone
