--- a/.drone.yml
+++ b/.drone.yml
@@ -24,9 +24,10 @@ pipeline:
     repo: andyet/talky-api
     tags:
       - ${DRONE_COMMIT_SHA:0:8}
+      - ${DRONE_TAG##v}
     secrets: [ docker_username, docker_password ]
     when:
-      event: [ push ]
+      event: [ tag ]
   build_docker_prod:
     image: plugins/docker
     repo: andyet/talky-api
@@ -42,13 +43,12 @@ pipeline:
     skip_tls_verify: false
     chart: ./charts/swrtc-api
     prefix: staging
-    debug: true
     recreate_pods: true
     release: swrtc-api-stage
     values: nodeSelector.swrtc-api-stage=yes,swrtc-ice.nodeSelector.ice-stage=yes,prosody.nodeSelector.prosody-stage=yes,deployment.image.tag=${DRONE_TAG##v},secondaryDomain=stagetalky.io,global.baseDomain=stagesimplewebrtc.com,global.environment=stage,swrtc-ice.deployment.image.tag=0.21,swrtc-ice.config.data.PUBLIC_IP=35.202.210.1,prosody.deployment.image.tag=latest-081018,secrets.data.REDIS_PASSWORD=$${REDIS_PASSWORD},secrets.data.DATABASE_URL=$${DATABASE_URL},secrets.data.TURN_SECRET=$${TURN_SECRET},secrets.data.ADMIN_PASSWORD=$${ADMIN_PASSWORD},secrets.data.CUSTOMER_API_KEY=$${CUSTOMER_API_KEY},secrets.data.INTERNAL_API_KEY=$${INTERNAL_API_KEY},secrets.data.TALKY_LICENSE=$${TALKY_LICENSE}
     secrets: [ staging_REDIS_PASSWORD, staging_DATABASE_URL, staging_TURN_SECRET, staging_ADMIN_PASSWORD, staging_CUSTOMER_API_KEY, staging_INTERNAL_API_KEY, staging_TALKY_LICENSE, staging_KUBERNETES_CERTIFICATE, staging_KUBERNETES_TOKEN, staging_API_SERVER ]
     when:
-      event: push
+      event: tag
   drone_helm_prod:
     image: andyet/drone-helm
     pull: true
