--- a/charts/swrtc-api/charts/swrtc-ice/templates/configmap.yaml
+++ b/charts/swrtc-api/charts/swrtc-ice/templates/configmap.yaml
@@ -7,7 +7,7 @@ data:
   {{- range $key, $val := .Values.config.data }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
-  API_URL: {{ printf "http://%s.default.svc.cluster.local:%s" ( include "swrtc-api.name" . ) ( .Values.global.apiServicePort | toString )  }} 
+  API_URL: {{ printf "http://%s.default.svc.cluster.local:%s" ( include "swrtc-api.ice-name" . ) ( .Values.global.apiServicePort | toString )  }}
   GLOBAL_DOMAIN: {{ printf "ice.%s" .Values.global.baseDomain }}
   REGION_DOMAIN: {{ printf "us-central1-a.%s" .Values.global.baseDomain }}
 {{- end }}
