Generate user JIDs in a predictable way based on JWT data.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "knex": "knex",
     "createdb": "psql -d postgres -c \"CREATE ROLE $(node -pe 'require(\"getconfig\").db.user') WITH PASSWORD '$(node -pe 'require(\"getconfig\").db.password')' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb $(node -pe 'require(\"getconfig\").db.database') -O $(node -pe 'require(\"getconfig\").db.user')",
     "destroydb": "psql -d postgres -c \"DROP DATABASE $(node -pe 'require(\"getconfig\").db.database')\" && psql -d postgres -c \"DROP ROLE $(node -pe 'require(\"getconfig\").db.user');\"",
-    "test": "lab -a code -L -v -e test -I __core-js_shared__",
+    "test": "lab -a code -L -v -e test -I __core-js_shared__,core",
     "coverage": "lab -a code -e test -L -r html -o coverage.html",
     "start-prosody": "node ./scripts/start-prosody",
     "purge-pii": "node ./scripts/purge-pii",
@@ -36,9 +36,10 @@
     "hapi": "^18.1.0",
     "hapi-auth-basic": "^5.0.0",
     "hapi-pagination": "^2.0.0",
-    "hapi-swagger": "^9.1.1",
+    "hapi-swagger": "^9.4.1",
     "humanize-duration": "^3.15.1",
     "inert": "^5.1.0",
+    "json-stringify-deterministic": "^1.0.1",
     "jsonwebtoken": "^8.3.0",
     "keyfob": "^1.0.0",
     "knex": "^0.16.3",
