Update the @hapi family of modules

--- a/package.json
+++ b/package.json
@@ -1,44 +1,23 @@
 {
   "name": "talky-core-api",
-  "version": "1.3.0",
   "description": "Talky Core API",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "migrate": "knex migrate:latest",
-    "rollback": "knex migrate:rollback",
-    "lint": "eslint .",
-    "knex": "knex",
-    "createdb": "psql -d postgres -c \"CREATE ROLE $(node -pe 'require(\"getconfig\").db.user') WITH PASSWORD '$(node -pe 'require(\"getconfig\").db.password')' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb $(node -pe 'require(\"getconfig\").db.database') -O $(node -pe 'require(\"getconfig\").db.user')",
-    "destroydb": "psql -d postgres -c \"DROP DATABASE $(node -pe 'require(\"getconfig\").db.database')\" && psql -d postgres -c \"DROP ROLE $(node -pe 'require(\"getconfig\").db.user');\"",
-    "test": "lab -a code -L -v -e test -I __core-js_shared__,core,CSS",
-    "coverage": "lab -a code -e test -L -r html -o coverage.html",
-    "start-prosody": "node ./scripts/start-prosody",
-    "purge-pii": "node ./scripts/purge-pii",
-    "prosody-config": "node ./scripts/prosody-config",
-    "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
-    "prosody-config-install-local": "npm run -s prosody-config > /usr/local/etc/prosody/prosody.cfg.lua",
-    "prosody-config-install-etc": "npm run -s prosody-config > /etc/prosody/prosody.cfg.lua",
-    "prosody-config-generate": "npm run -s prosody-config > ./prosody.cfg.lua",
-    "certgen": "openssl req -nodes -new -x509 -keyout config/key.pem -out config/cert.pem -days 365"
-  },
-  "author": "",
-  "license": "See LICENSE file",
+  "version": "1.3.0",
   "dependencies": {
+    "@hapi/basic": "^5.1.0",
+    "@hapi/boom": "^7.4.2",
+    "@hapi/good": "^8.2.0",
+    "@hapi/good-console": "^8.0.0",
+    "@hapi/good-squeeze": "^5.1.0",
+    "@hapi/hapi": "^18.3.1",
+    "@hapi/inert": "^5.2.0",
+    "@hapi/vision": "^5.5.2",
     "@now-ims/hapi-now-auth": "^2.0.0",
     "array-shuffle": "^1.0.1",
     "base32-crockford-browser": "^1.0.0",
-    "boom": "^7.2.0",
     "getconfig": "^4.5.0",
-    "good": "^8.1.1",
-    "good-console": "^8.0.0",
-    "good-squeeze": "^5.1.0",
-    "hapi": "^18.1.0",
-    "hapi-auth-basic": "^5.0.0",
     "hapi-pagination": "^2.0.0",
     "hapi-swagger": "^10.0.2",
     "humanize-duration": "^3.15.1",
-    "inert": "^5.1.0",
     "json-stringify-deterministic": "^1.0.1",
     "jsonwebtoken": "^8.3.0",
     "keyfob": "^1.0.0",
@@ -48,24 +27,44 @@
     "pg": "^7.4.3",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
-    "ua-parser-js": "^0.7.18",
-    "vision": "^5.3.3"
+    "ua-parser-js": "^0.7.18"
   },
   "devDependencies": {
+    "@hapi/lab": "^19.1.0",
     "cheerio": "^1.0.0-rc.2",
     "code": "^5.2.0",
     "eslint": "^6.0.0",
     "eslint-config-andyet": "^2.1.0",
     "faker": "^4.1.0",
     "git-validate": "^2.2.4",
-    "lab": "^18.0.2",
     "nock": "^10.0.0",
     "readline-sync": "^1.4.9",
     "redis-mock": "^0.44.0"
   },
+  "license": "See LICENSE file",
+  "main": "server.js",
   "pre-commit": [
     "lint",
     "test"
   ],
-  "private": true
+  "private": true,
+  "scripts": {
+    "certgen": "openssl req -nodes -new -x509 -keyout config/key.pem -out config/cert.pem -days 365",
+    "coverage": "lab -a code -e test -L -r html -o coverage.html",
+    "createdb": "psql -d postgres -c \"CREATE ROLE $(node -pe 'require(\"getconfig\").db.user') WITH PASSWORD '$(node -pe 'require(\"getconfig\").db.password')' NOSUPERUSER NOCREATEDB NOCREATEROLE INHERIT LOGIN\" && createdb $(node -pe 'require(\"getconfig\").db.database') -O $(node -pe 'require(\"getconfig\").db.user')",
+    "destroydb": "psql -d postgres -c \"DROP DATABASE $(node -pe 'require(\"getconfig\").db.database')\" && psql -d postgres -c \"DROP ROLE $(node -pe 'require(\"getconfig\").db.user');\"",
+    "knex": "knex",
+    "lint": "eslint .",
+    "migrate": "knex migrate:latest",
+    "prosody-config": "node ./scripts/prosody-config",
+    "prosody-config-generate": "npm run -s prosody-config > ./prosody.cfg.lua",
+    "prosody-config-install-docker": "npm run -s prosody-config > config/prosody.cfg.lua",
+    "prosody-config-install-etc": "npm run -s prosody-config > /etc/prosody/prosody.cfg.lua",
+    "prosody-config-install-local": "npm run -s prosody-config > /usr/local/etc/prosody/prosody.cfg.lua",
+    "purge-pii": "node ./scripts/purge-pii",
+    "rollback": "knex migrate:rollback",
+    "start": "node server.js",
+    "start-prosody": "node ./scripts/start-prosody",
+    "test": "lab -a code -L -v -e test -I __core-js_shared__,core,CSS"
+  }
 }
