--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,7 @@ pipeline:
   drone_helm_stage:
     image: andyet/drone-helm
     pull: true
+    debug: true
     skip_tls_verify: false
     chart: andyet/swrtc-api
     prefix: staging
