--- a/.drone.yml
+++ b/.drone.yml
@@ -41,6 +41,7 @@ pipeline:
     image: andyet/drone-helm
     pull: true
     debug: true
+    dry-run: true
     skip_tls_verify: false
     chart: andyet/swrtc-api
     prefix: staging
