--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hapi/good-squeeze": "^5.1.0",
     "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.0",
+    "@hapi/joi": "^15.1.0",
     "@hapi/vision": "^5.5.2",
     "@now-ims/hapi-now-auth": "^2.0.0",
     "array-shuffle": "^1.0.1",
